--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,4 @@ I graduated from the University of California, Davis. My major is economics and 
 Fei Sun\
 +1 518-495-0077\
 42-20 24th St\
-Long Island City, NY 11101\
-Email: fs2757@columbia.edu\
-GitHub account: [Fei's GitHub](https://www.github.com/ffsun812)\
-Linkedin: [Fei's Linkedin](https://www.linkedin.com/in/fei-sun-838a6421b/)
+Long Island City, NY 11101
